--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="assets/css/main.css" />
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/main.css"/>
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <script src="https://code.angularjs.org/tools/system.js"></script>
@@ -17,8 +17,11 @@
 	<script src="assets/js/main.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="assets/js//ng2-bs3-modal.system.js"></script>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
